--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-297.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-426.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-274.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇦 加拿大-430.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-11.45MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 53a57e61-acac-4197-ab45-345f61b00576, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇳 中国-202.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇨🇦 加拿大-828.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-464.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-592.8KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇦 加拿大-432.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-844.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-430.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-828.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-464.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-844.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
