--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-474.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-310.6KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-925.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-716.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-807.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-567.6KB/s(Youtube:不良林), server: kr-01.licom.ml, port: 11050, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: kr-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇦 加拿大-578.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-329.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-447.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-448.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-616.4KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-344.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-474.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-925.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-716.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-807.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
